--- a/index.html
+++ b/index.html
@@ -16,8 +16,12 @@
     <h3 id="pets" >0</h3>
     <img src="New Piskel (1).png" alt="" style="image-rendering: pixelated; width: 100px; height: auto;" class="jeremy">
     <button class="pet" onclick="addToScore(1)">Pet</button>
+    <div class="footer">
+      <a href="credits.html" style="text-decoration: none;">
+        <h5 style="color: red;">Credits<br><span class="creditscs">/Story</span></h5>
+      </a>
+      <h5>| This is Jeremys first home</h5>
+    </div>
   </div>
   <script src="script.js"></script>
 </body>
-
-</html>
